atualização do site

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <nav>
         <div class="ancoras">
-            <a href="#">whatsapp</a>
-            <a href="#">Instagram</a>
+            <a href="https://api.whatsapp.com/send/?phone=%2B5511966709873&text&type=phone_number&app_absent=0" target="_blank">whatsapp</a>
+            <a href="https://www.instagram.com/_digo.cell_/" target="_blank">Instagram</a>
         </div>
     </nav>
     <main>
@@ -31,7 +31,7 @@
         <article>
             <p>Nao perca a chance de ter seu aparelho novinho outra vez, mande uma mensagem agora mesmo para fazer um orçamento !</p>
             <section>
-                <a href="https://api.whatsapp.com/send/?phone=%2B5511966709873&text&type=phone_number&app_absent=0" class="whats">Chamar no whatsapp</a>
+                <a href="https://api.whatsapp.com/send/?phone=%2B5511966709873&text&type=phone_number&app_absent=0" target="_blank" class="whats">Chamar no whatsapp</a>
             </section>
         </article>
     </main>
