--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/Graphicloads-Colorful-Long-Shadow-Mobile-3.256.png" type="image/x-icon">
     <title>Digo Cell</title>
 </head>
 <body>
