atualização de  cor

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <nav>
         <div class="ancoras">
-            <a href="https://api.whatsapp.com/send/?phone=%2B5511966709873&text&type=phone_number&app_absent=0" target="_blank">whatsapp</a>
-            <a href="https://www.instagram.com/_digo.cell_/" target="_blank">Instagram</a>
+            <a href="https://api.whatsapp.com/send/?phone=%2B5511966709873&text&type=phone_number&app_absent=0" target="_blank" id="whats">whatsapp</a>
+            <a href="https://www.instagram.com/_digo.cell_/" target="_blank" id="insta">Instagram</a>
         </div>
     </nav>
     <main>
