atualizaçao do titulo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <p class="left-text">Especialização em troca de telas e componentes</p>
-        <h1>_digo.cell_</h1>
+        <h1>DIGO CELL</h1>
         <p class="right-text">Melhores preços da região!!</p>
     </header>
     <nav>
